--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html,body{
     margin:0 auto;
     height:100%;
     width:100%;
-    background-color:goldenrod;
+    background-color:#000;
     
 }
 
@@ -10,7 +10,7 @@ header{
     margin:none;
     display:inline-block; 
     width:100%;
-    height:15rem;
+    height:15.6rem;
     padding:1rem;
     background-color:gray;
     
@@ -98,7 +98,7 @@ nav{
 nav > ul{
     width:0 auto;
     padding:4px;
-    text-align: center;
+    text-align:center;
     transition:background 3s;
     
 }
@@ -124,12 +124,12 @@ ul:hover{
 li > a{
     padding:inherit;
     color:white;
-    text-decoration: none;
+    text-decoration:none;
     
 }
 
 li > a:hover{
-    text-decoration: underline;
+    text-decoration:underline;
     color:navy;
 }
 
@@ -141,7 +141,7 @@ main{
     margin:none;
     display:inline-block; 
     width:100%;
-    height:80%;
+    height:auto;
     padding:1rem;
     background-color:blue;
 }
@@ -155,11 +155,21 @@ p{
 
 #image1{
     
-    height:;
+    height:390px;
     background-color:navy;
     display:inline-block;
     width:calc(100%/2);
     float:left;
+    text-align:center;
+}
+    
+
+#mar p{
+    
+    color:#fff;
+    font-size:1.8em;
+    font-weight:800;
+    text-transform:uppercase;
     text-align:center;
 }
 #image2{
@@ -173,15 +183,18 @@ p{
 main > section > p{
     
     display:block;
-    color:black;
+    margin:0 auto;
+    color:#fff;
     text-align:center;
-    overflow: hidden;
-    margin:10px;
-    padding:10px;
+    padding:1%;
     width:100%;
     height:20%;
-    background-color:goldenrod;
+    background-color:#000;
     
+}
+#hydrant{
+    color:blue;
+    font-weight: 800
 }
     
 footer > span > a{
@@ -211,6 +224,20 @@ a{
     text-decoration: underline;
         
 }
+/*
+.jumbotron{
+    width:30%;
+    height:2%;
+    background-color:gray;
+    border: solid white;
+    
+}
+.jumbotron h1{
+    font-size:1.3em;
+    color:goldenrod;
+
+}
+*/
 
 footer{
     display:flex;
