--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,14 @@ a{
     text-decoration: underline;
         
 }
+
+#copy{
+    color:blue;
+    display:block;
+
+    
+}
+
 /*
 .jumbotron{
     width:30%;
@@ -243,8 +251,7 @@ footer{
     display:flex;
     flex-direction:row-reverse;
     justify-content:space-between;
-    align-items:flex-end;
-    
+    align-items:flex-end;   
     margin:0 auto;
     width:100%;
     height:20%;
