--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ header:hover{
     
     width:calc(100%/3);
     float:left;
-    text-align: center;
-    background-color:firebrick;
+    text-align:center;
+    background-color:dodgerblue;
     border:solid;
     border-color:lightgray;
     border-radius:40rem 7rem 20rem 9rem;
@@ -67,7 +67,7 @@ span > h1:hover{
     width:calc(100%/3);
     float:right;
     text-align:center;
-    background-color:firebrick;
+    background-color:dodgerblue;
     border:solid;
     border-color:lightgray;
     border-radius:7rem 40rem 9rem 20rem;
@@ -229,6 +229,7 @@ a{
 #copy{
     color:blue;
     display:block;
+    font-family:cursive;
 
     
 }
